# test-browser-use

./: .gitignore  Dockerfile  README.md  pyproject.toml  sample.env.env  smithery.yaml
documentation/: SECURITY.md
src/mcp_browser_use/: __init__.py  server.py
src/mcp_browser_use/agent/: custom_agent.py  custom_massage_manager.py  custom_prompts.py  custom_views.py
src/mcp_browser_use/browser/: config.py  custom_browser.py  custom_context.py
src/mcp_browser_use/controller/: custom_controller.py
src/mcp_browser_use/utils/: agent_state.py
