[project]
name = "mcp_browser_use"
version = "0.1.0"
description = "MCP server for browser-use"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.10.5",
    "fastapi>=0.115.6",
    "uvicorn>=0.22.0",
    "fastmcp>=0.4.1",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.14",
    "langchain-openai>=0.2.14",
    "langchain-ollama>=0.2.2",
    "openai>=1.59.5",
    "browser-use==0.1.19",
    "instructor>=1.7.2",
    "pyperclip>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_browser_use"]

[project.scripts]
mcp-browser-use = "mcp_browser_use.server:main"
